--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "lerna": "^8.1.3"
+    "lerna": "^8.1.3",
+    "typescript": "^5.4.5"
   }
 }
