--- a/packages/js-bridge/package.json
+++ b/packages/js-bridge/package.json
@@ -27,11 +27,9 @@
     "npm-run-all": "^4.1.5"
   },
   "homepage": "",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
   "files": [
-    "lib"
+    "es",
+    "src",
+    "umd"
   ]
 }
