--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "root",
   "private": true,
+  "version": "0.0.20",
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "sa": "node ./scripts/release.mjs",
+    "release": "pnpm run sa release"
+  },
   "devDependencies": {
+    "bumpp": "^9.4.1",
     "lerna": "^8.1.3",
     "typescript": "^5.4.5"
   }
