--- a/packages/boke-devops-ui/package.json
+++ b/packages/boke-devops-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boke-devops-ui",
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "BokeDevopsUI",
   "main": "dist/index.es.js",
   "types": "./dist/index.d.ts",
@@ -54,5 +54,6 @@
   "keywords": [],
   "authors": [
     "Julone"
-  ]
+  ],
+  "gitHead": "35743a6fa655ec881297d4c5a2d023c1fe63b58b"
 }
