chore: add scope

--- a/packages/js-bridge/package.json
+++ b/packages/js-bridge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boke-js-bridge",
+  "name": "@devops/boke-js-bridge",
   "version": "0.0.26",
   "private": true,
   "description": "boke-JS-BRIDGE",
