--- a/packages/boke-devops-ui/package.json
+++ b/packages/boke-devops-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boke-devops-vue",
+  "name": "@devops/boke-devops-vue",
   "version": "0.0.26",
   "description": "BokeDevopsUI",
   "main": "dist/index.es.js",
