fix: 修复头像组件key没有刷新问题 feat: 新增微前端组件

--- a/packages/boke-devops-ui/package.json
+++ b/packages/boke-devops-ui/package.json
@@ -8,8 +8,8 @@
     "start": "vite --host",
     "dev": "npm start ",
     "build": "vite build",
-    "pretest": "npm build",
-    "test": "web-test-runner \"test/*.js\" --node-resolve",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "lint": "eslint 'src/**/*.{js,ts,tsx,jsx}' 'examples/**/*.{js,ts,tsx,jsx}' --fix"
   },
   "files": [
