--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "release": "pnpm run build && pnpm run sa release",
     "dev": "cd packages/boke-devops-ui && npm run dev",
     "build": "cd packages/boke-devops-ui && npm run build",
-    "publish": "cd packages/boke-devops-ui && npm publish"
+    "publish": "cd packages/boke-devops-ui && npm publish",
+    "test": "cd packages/boke-devops-ui && npm run test"
   },
   "devDependencies": {
+    "@vitest/ui": "^1.6.0",
     "bumpp": "^9.4.1",
     "lerna": "^8.1.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@devops/boke-devops-vue": "^0.0.26"
