--- a/packages/boke-devops-ui/tsconfig.json
+++ b/packages/boke-devops-ui/tsconfig.json
@@ -26,7 +26,7 @@
     "src/**/*.vue",
     "src/**/*.d.ts",
     "src/**/*.tsx"
-  ],
+, "src/AegisUser/tests/Avatar.test.jsx", "src/AegisUser/tests/Avatar.test.jsx", "test/Provider-test.vue"  ],
   "exclude": [
     "node_modules"
   ]
