--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "dev": "cd packages/boke-devops-ui && npm run dev",
     "build": "cd packages/boke-devops-ui && npm run build",
     "publish": "cd packages/boke-devops-ui && npm publish",
-    "test": "cd packages/boke-devops-ui && npm run test"
+    "test": "vitest --ui"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "^2.3.4",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "1.6.0",
@@ -28,7 +28,6 @@
     "vue-router": "^4.4.0"
   },
   "dependencies": {
-    "@devops/boke-devops-vue": "^0.0.26",
     "unplugin-vue-macros": "^2.9.5"
   }
 }
