--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "dev": "cd packages/boke-devops-ui && npm run dev",
     "build": "cd packages/boke-devops-ui && npm run build",
     "publish": "cd packages/boke-devops-ui && npm publish",
-    "test": "vitest --ui"
+    "test": "vitest --ui",
+    "test:snap": "vitest --ui -u"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.4",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "1.6.0",
-    "@vue/test-utils": "^2.0.0",
+    "@vue/test-utils": "^2.4.6",
     "bumpp": "^9.4.1",
     "jsdom": "^24.1.0",
     "lerna": "^8.1.5",
@@ -28,6 +29,9 @@
     "vue-router": "^4.4.0"
   },
   "dependencies": {
-    "unplugin-vue-macros": "^2.9.5"
+    "happy-dom": "^14.12.3",
+    "jest": "^29.7.0",
+    "unplugin-vue-macros": "^2.9.5",
+    "vue": "^3.4.31"
   }
 }
