--- a/packages/boke-docs/package.json
+++ b/packages/boke-docs/package.json
@@ -15,15 +15,17 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@dumijs/preset-vue": "^2.3.0",
+    "@vue/compiler-sfc": "^3.0.5",
     "dayjs": "^1.11.10",
     "dumi": "^2.4.5",
     "element-plus": "^2.3.14",
     "pinia": "^2.1.7",
     "react": "^18.2.0",
-    "vue": "3.4.15"
+    "vue": "^3.4.31"
   },
   "devDependencies": {
-    "@dumijs/preset-vue": "^2.3.0",
+    "@devops/boke-devops-vue": "workspace:*",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint-plugin-vue": "^9.17.0",
     "typescript": "~4.7.4",
