chore: update some

--- a/packages/boke-devops-vue/tsconfig.json
+++ b/packages/boke-devops-vue/tsconfig.json
@@ -7,15 +7,15 @@
       "dom.iterable"
     ],
     "declaration": true,
-    "emitDeclarationOnly": true,
     "outDir": "./types",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": false,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+      "skipLibCheck": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "preserve",
