--- a/packages/boke-devops-vue/package.json
+++ b/packages/boke-devops-vue/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "vite --host",
     "dev": "npm start ",
-    "build": "tsc --emitDeclarationOnly -d && vite build",
+    "build:tsc": "vue-tsc --emitDeclarationOnly -d",
+    "build": "pnpm run build:tsc && vite build",
     "lint": "eslint 'src/**/*.{js,ts,tsx,jsx}' 'examples/**/*.{js,ts,tsx,jsx}' --fix"
   },
   "files": [
