fix: 修复user-select组件样式问题

--- a/packages/boke-devops-vue/tsconfig.json
+++ b/packages/boke-devops-vue/tsconfig.json
@@ -14,6 +14,7 @@
     "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": false,
     "moduleResolution": "node",
+    "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
       "skipLibCheck": true,
     "experimentalDecorators": true,
