--- a/packages/boke-devops-vue/package.json
+++ b/packages/boke-devops-vue/package.json
@@ -2,6 +2,7 @@
   "name": "@devops/boke-devops-vue",
   "version": "0.0.30",
   "description": "BokeDevopsUI",
+  "author": "Julone",
   "main": "dist/index.es.js",
   "types": "./dist/index.d.ts",
   "scripts": {
