--- a/packages/boke-docs/package.json
+++ b/packages/boke-docs/package.json
@@ -33,6 +33,5 @@
     "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.25.2"
   },
-  "authors": [],
-  "version": "0.0.30"
+  "authors": []
 }
