chore: remove package.json import

--- a/packages/boke-devops-vue/tsconfig.json
+++ b/packages/boke-devops-vue/tsconfig.json
@@ -13,8 +13,8 @@
     "noUnusedParameters": false,
     "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": false,
+    "moduleResolution": "node",
     "noImplicitAny": false,
-    "resolvePackageJsonImports": true,
     "allowSyntheticDefaultImports": true,
       "skipLibCheck": true,
     "experimentalDecorators": true,
